-- GoalZone PostgreSQL/Supabase baseline.
-- Keep names and types aligned with the JPA entities. `LocalDateTime` is
-- deliberately stored as timestamp without time zone; application times are
-- venue-local and the application currently does not carry an offset.

create table role (
    role_id bigint generated by default as identity primary key,
    role_name varchar(30) not null unique,
    description varchar(255),
    status varchar(255) not null default 'active',
    created_at timestamp,
    updated_at timestamp
);

create table app_user (
    user_id bigint generated by default as identity primary key,
    role_id bigint not null references role(role_id),
    full_name varchar(100) not null,
    email varchar(120) unique,
    phone varchar(20) unique,
    password_hash varchar(255) not null,
    avatar_url varchar(255),
    date_of_birth date,
    address varchar(255),
    status varchar(255) not null default 'active',
    booking_restricted boolean not null default false,
    restriction_reason varchar(255),
    last_login_at timestamp,
    email_verified boolean not null default false,
    email_verification_token varchar(16),
    email_verification_sent_at timestamp,
    password_reset_token varchar(16),
    password_reset_sent_at timestamp,
    created_at timestamp,
    updated_at timestamp
);

create table membership_level (
    membership_level_id bigint generated by default as identity primary key,
    level_name varchar(50) not null unique,
    required_completed_bookings integer not null default 0,
    discount_percent numeric(5,2) not null default 0,
    benefit_description text,
    display_order integer not null default 0,
    status varchar(255) not null default 'active',
    created_at timestamp,
    updated_at timestamp
);

create table customer_membership (
    customer_membership_id bigint generated by default as identity primary key,
    customer_id bigint not null references app_user(user_id),
    membership_level_id bigint not null references membership_level(membership_level_id),
    completed_booking_count integer not null default 0,
    progress_note varchar(255),
    effective_from date,
    effective_to date,
    created_at timestamp,
    updated_at timestamp
);

create table field_type (
    field_type_id bigint generated by default as identity primary key,
    type_name varchar(50) not null unique,
    player_capacity integer,
    description varchar(255),
    status varchar(255) not null default 'active',
    created_at timestamp,
    updated_at timestamp
);

create table field (
    field_id bigint generated by default as identity primary key,
    field_type_id bigint not null references field_type(field_type_id),
    field_name varchar(100) not null,
    description text,
    image_url varchar(255),
    location varchar(255),
    surface_type varchar(50),
    status varchar(255) not null default 'active',
    created_at timestamp,
    updated_at timestamp
);

create table field_price (
    field_price_id bigint generated by default as identity primary key,
    field_id bigint not null references field(field_id),
    day_type varchar(30) not null,
    start_time time not null,
    end_time time not null,
    price numeric(12,2) not null,
    effective_from date,
    effective_to date,
    status varchar(255) not null default 'active',
    created_at timestamp,
    updated_at timestamp
);

create table slot (
    slot_id bigint generated by default as identity primary key,
    field_id bigint not null references field(field_id),
    slot_date date not null,
    start_time time not null,
    end_time time not null,
    status varchar(255) not null default 'available',
    block_reason varchar(100),
    block_note varchar(255),
    created_by bigint references app_user(user_id),
    created_at timestamp,
    updated_at timestamp,
    constraint uk_slot_field_date_time unique (field_id, slot_date, start_time, end_time)
);

create table booking (
    booking_id bigint generated by default as identity primary key,
    customer_id bigint not null references app_user(user_id),
    staff_id bigint references app_user(user_id),
    slot_id bigint not null references slot(slot_id),
    booking_code varchar(30) not null unique,
    status varchar(255) not null default 'pending',
    booking_source varchar(255) not null default 'online',
    field_price_amount numeric(12,2) not null default 0,
    service_total_amount numeric(12,2) not null default 0,
    promotion_discount_amount numeric(12,2) not null default 0,
    membership_discount_amount numeric(12,2) not null default 0,
    total_amount numeric(12,2) not null default 0,
    deposit_amount numeric(12,2) not null default 0,
    paid_amount numeric(12,2) not null default 0,
    remaining_amount numeric(12,2) not null default 0,
    cancellation_fee_amount numeric(12,2) not null default 0,
    refundable_amount numeric(12,2) not null default 0,
    note varchar(255),
    confirmed_at timestamp,
    checked_in_at timestamp,
    completed_at timestamp,
    cancelled_at timestamp,
    expired_at timestamp,
    created_at timestamp,
    updated_at timestamp
);

create table extra_service (
    extra_service_id bigint generated by default as identity primary key,
    service_name varchar(100) not null,
    service_type varchar(255) not null default 'rental',
    description varchar(255),
    unit_name varchar(30) not null default 'item',
    unit_price numeric(12,2) not null,
    stock_quantity integer,
    max_quantity_per_booking integer,
    status varchar(255) not null default 'active',
    created_at timestamp,
    updated_at timestamp
);

create table booking_service (
    booking_service_id bigint generated by default as identity primary key,
    booking_id bigint not null references booking(booking_id),
    extra_service_id bigint not null references extra_service(extra_service_id),
    quantity integer not null default 1,
    unit_price numeric(12,2) not null,
    line_total numeric(12,2) not null,
    created_at timestamp,
    updated_at timestamp,
    constraint uk_booking_service_item unique (booking_id, extra_service_id)
);

create table issue (
    issue_id bigint generated by default as identity primary key,
    reporter_id bigint not null references app_user(user_id),
    booking_id bigint references booking(booking_id),
    field_id bigint references field(field_id),
    extra_service_id bigint references extra_service(extra_service_id),
    assigned_staff_id bigint references app_user(user_id),
    title varchar(150) not null,
    description text,
    status varchar(255) not null default 'open',
    resolution_note text,
    resolved_at timestamp,
    created_at timestamp,
    updated_at timestamp
);

create table promotion (
    promotion_id bigint generated by default as identity primary key,
    promotion_code varchar(50) not null unique,
    promotion_name varchar(120) not null,
    banner_url varchar(255),
    description text,
    discount_type varchar(255) not null,
    discount_value numeric(12,2) not null,
    max_discount_amount numeric(12,2),
    min_booking_amount numeric(12,2),
    usage_limit integer,
    used_count integer not null default 0,
    start_date date not null,
    end_date date not null,
    applicable_field_type_id bigint references field_type(field_type_id),
    applicable_membership_level_id bigint references membership_level(membership_level_id),
    applicable_extra_service_id bigint references extra_service(extra_service_id),
    applicable_day_type varchar(30),
    applicable_start_time time,
    applicable_end_time time,
    stackable boolean not null default false,
    status varchar(255) not null default 'active',
    created_at timestamp,
    updated_at timestamp
);

create table booking_promotion (
    booking_promotion_id bigint generated by default as identity primary key,
    booking_id bigint not null references booking(booking_id),
    promotion_id bigint not null references promotion(promotion_id),
    promotion_code_snapshot varchar(50) not null,
    discount_amount numeric(12,2) not null,
    applied_at timestamp,
    constraint uk_booking_promotion unique (booking_id, promotion_id)
);

create table payment (
    payment_id bigint generated by default as identity primary key,
    booking_id bigint not null references booking(booking_id),
    payment_code varchar(50) not null unique,
    payment_option varchar(255) not null,
    payment_method varchar(255) not null,
    amount numeric(12,2) not null,
    status varchar(255) not null default 'pending',
    transaction_code varchar(100),
    provider_order_id varchar(120),
    provider_capture_id varchar(120),
    provider_status varchar(50),
    currency varchar(10),
    idempotency_key varchar(120),
    gateway_message varchar(255),
    paid_at timestamp,
    expired_at timestamp,
    created_by bigint references app_user(user_id),
    created_at timestamp,
    updated_at timestamp
);

create table invoice (
    invoice_id bigint generated by default as identity primary key,
    booking_id bigint not null unique references booking(booking_id),
    invoice_code varchar(50) not null unique,
    field_amount numeric(12,2) not null default 0,
    service_amount numeric(12,2) not null default 0,
    discount_amount numeric(12,2) not null default 0,
    total_amount numeric(12,2) not null default 0,
    paid_amount numeric(12,2) not null default 0,
    remaining_amount numeric(12,2) not null default 0,
    refund_amount numeric(12,2) not null default 0,
    issued_at timestamp,
    created_at timestamp,
    updated_at timestamp
);

create table refund (
    refund_id bigint generated by default as identity primary key,
    booking_id bigint not null references booking(booking_id),
    payment_id bigint references payment(payment_id),
    refund_code varchar(50) not null unique,
    requested_by bigint references app_user(user_id),
    processed_by bigint references app_user(user_id),
    refund_amount numeric(12,2) not null,
    refund_reason varchar(255),
    status varchar(255) not null default 'requested',
    transaction_code varchar(100),
    requested_at timestamp,
    processed_at timestamp,
    created_at timestamp,
    updated_at timestamp
);

create table notification (
    notification_id bigint generated by default as identity primary key,
    user_id bigint not null references app_user(user_id),
    booking_id bigint references booking(booking_id),
    payment_id bigint references payment(payment_id),
    refund_id bigint references refund(refund_id),
    notification_type varchar(255) not null,
    title varchar(150) not null,
    message text not null,
    is_read boolean not null default false,
    sent_at timestamp,
    created_at timestamp default current_timestamp
);

create table system_setting (
    setting_id bigint generated by default as identity primary key,
    setting_key varchar(100) not null unique,
    setting_value varchar(255) not null,
    setting_group varchar(50) not null,
    description varchar(255),
    status varchar(255) not null default 'active',
    updated_by bigint references app_user(user_id),
    created_at timestamp,
    updated_at timestamp
);
