@startuml

skinparam classAttributeIconSize 0
skinparam linetype polyline

class BookingController <<controller>> {
    -bookingWorkflowService : BookingWorkflowService

    +cancellationPreview(bookingId : Long) : Object
}

class BookingWorkflowService <<service>> {
    -support : DomainSupportService

    +previewCancellation(bookingId : Long) : Map<String, Object>
    -requireBookingVisible(booking : Booking) : void
}

class DomainSupportService <<service>> {
    -bookingRepository : BookingRepository
    -refundRepository : RefundRepository
    -systemSettingRepository : SystemSettingRepository

    +getBooking(bookingId : Long) : Booking
    +calculateCancellationPreview(booking : Booking) : Map<String, Object>
    +completedRefundAmount(booking : Booking) : BigDecimal
    +remainingRefundEntitlement(booking : Booking, grossEntitlement : BigDecimal) : BigDecimal
    +settingDecimal(key : String, fallback : BigDecimal) : BigDecimal
    +money(value : BigDecimal) : BigDecimal
}

interface BookingRepository <<repository>> {
    +findById(id : Long) : Optional<Booking>
}

interface SystemSettingRepository <<repository>> {
    +findBySettingKey(settingKey : String) : Optional<SystemSetting>
}

interface RefundRepository <<repository>> {
    +findByBooking_BookingIdOrderByRefundIdDesc(bookingId : Long) : List<Refund>
}

class Booking <<entity>> {
    -bookingId : Long
    -customer : AppUser
    -slot : Slot
    -status : BookingStatus
    -paidAmount : BigDecimal
}

class Slot <<entity>> {
    -slotId : Long
    -slotDate : LocalDate
    -startTime : LocalTime
}

class SystemSetting <<entity>> {
    -settingId : Long
    -settingKey : String
    -settingValue : String
    -settingGroup : String
    -status : CommonStatus
}

BookingController ..> BookingWorkflowService
BookingWorkflowService ..> DomainSupportService
DomainSupportService ..> BookingRepository
DomainSupportService ..> SystemSettingRepository
DomainSupportService ..> RefundRepository
BookingRepository --> Booking
SystemSettingRepository --> SystemSetting
RefundRepository --> Refund
Booking --> Slot

@enduml
